--- a/AppMinhasCompras/AppMinhasCompras/View/Listagem.xaml
+++ b/AppMinhasCompras/AppMinhasCompras/View/Listagem.xaml
@@ -11,10 +11,10 @@
     
     <ContentPage.Content>
         <StackLayout>
-            <SearchBar x:Name="txt_busca" Placeholder="Pesquisar produto" />
+            <SearchBar x:Name="txt_busca" Placeholder="Pesquisar produto" TextChanged="txt_busca_TextChanged"/>
 
             <RefreshView x:Name="ref_carregando" IsRefreshing="true">
-                <ListView x:Name="lst_produto">
+                <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected">
                     <ListView.Header>
                         <Grid RowDefinitions="Auto" ColumnDefinitions="*, Auto, Auto">
                             <Label Grid.Row="0" Grid.Column="0" Text="Descrição" />
@@ -26,6 +26,10 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
+                                <ViewCell.ContextActions>
+                                    <MenuItem Text="Remover" Clicked="MenuItem_Clicked" />
+                                </ViewCell.ContextActions>
+                                
                                 <Grid RowDefinitions="Auto" ColumnDefinitions="*, Auto, Auto">
                                     <Label Grid.Row="0" Grid.Column="0" Text="{Binding descricao}" />
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding quantidade}" />
